Изменение 1 раздела отчета

--- a/Chapter_1.tex
+++ b/Chapter_1.tex
@@ -16,20 +16,66 @@
 
 {\gostFont
 
-  \par \redline ОАО «Савушкин Продукт» – это одно из ведущих предприятий пищевой промышленности Беларуси, специализирующееся на производстве молочной продукции. Компания выпускает широкий ассортимент изделий: молоко, кефир, творог, сметану, сыры и другие кисломолочные продукты. Будучи открытым акционерным обществом, предприятие поддерживает высокие стандарты корпоративного управления, что позволяет ему гибко реагировать на изменения рыночной среды и поддерживать устойчивое развитие. 
+  \par \redline Организационная структура - это схема, отражающая иерархию управления и взаимосвязи между различными подразделениями и должностями внутри организации. Она показывает, как устроено управление компанией, кто кому подчиняется, какие подразделения существуют и как они взаимодействуют. Это "скелет" организации, определяющий ее формальные коммуникации и потоки информации.
 
-  \par \redline Начав с небольшого предприятия, «Савушкин Продукт» за годы работы трансформировался в современную производственную площадку с хорошо выстроенной системой управления. В основе успеха лежит последовательное внедрение инноваций, повышение качества продукции и постоянное совершенствование технологических процессов. Такие меры позволили не только укрепить позиции на внутреннем рынке, но и создать предпосылки для выхода на международную арену.
+  \par \redline \textbf{Организационная структура ОАО «Савушкин продукт»}
 
-  \par \redline Продукция ОАО «Савушкин Продукт» представляет собой гармоничное сочетание традиционных методов молочной обработки и современных технологических решений. Такой подход обеспечивает изготовление высококачественных, безопасных для здоровья и вкусных продуктов, способных удовлетворить запросы самых требовательных потребителей. Дополнительно, постоянное обновление ассортимента через внедрение инноваций позволяет компании сохранять лидерские позиции в условиях жесткой конкуренции. 
+  \par \redline ОАО «Савушкин продукт» представляет собой крупное производственное объединение, включающее 6 высокотехнологичных производственных площадок, расположенных в Бресте, Пинске, Столине, Берёзе, Ивацевичах и Барановичах. Организационная структура предприятия построена по территориально-производственному принципу.
 
-  \par \redline ОАО «Савушкин Продукт» традиционно ассоциируется с высоким качеством молочной продукции и стабильными производственными процессами. Чтобы не только сохранять лидирующие позиции на отечественном рынке, но и задавать новые тренды в отрасли, предприятие создало Бюро перспективных разработок. Это специализированное подразделение выполняет важную стратегическую функцию, концентрируя усилия на поиске, разработке и внедрении инноваций. 
-
-  \par \redline К основным задачам Бюро перспективных разработок относится разработка и поддержка иновационных инструментов для управления предприятием, разработка систем для создания описаний тех-процессов на предприятии, изучение новых технологий, которые могут повысить показатели производства, обеспечение бесперебойного функционирования предприятия. 
+  \par \redline Во главе предприятия стоит генеральный директор, которому подчиняются несколько заместителей по различным направлениям деятельности. Каждое функциональное направление представлено отдельным подразделением, а именно:
   
-  \par \redline ОАО «Савушкин Продукт» имеет развитую сеть филиалов,и Бюро перспективных разработок занимается поддержанием работоспособности каждого из этих филиалов.
- 
+  \par \redline • Производственный департамент;
+  \par \redline • Финансовое управление;
+  \par \redline • Отдел сбыта и маркетинга;
+  \par \redline • Отдел информационных технологий;
+  \par \redline • Юридический отдел;
+  \par \redline • Отдел кадров.
 
-  \par \redline В заключении данной главы, стоит отметить, что ОАО «Савушкин Продукт» является лидером в выпуске молочной продукции в Республике Беларусь, и Бюро перспективных разработок внесло немалый вклад в это достяжение своей работой. Внедрение персективных разработок является важной деталью для достяжения таких вершин в наше время, также как и поодержание уже существующих технологий. ОАО «Савушкин Продукт» совмещает в себе традиционные методы производства и передовые технологии, что позволяет назвать данное предприятие передовым предприятием на територии Республики Беларусь. 
+  \par \redline Внутри этих крупных подразделений выделены дополнительные структурные единицы, такие как секторы, группы, бюро. Управление предприятием осуществляется через головной офис, расположенный в Бресте. В структуру управления также входят:
+  
+  \par \redline • Совет директоров
+  \par \redline • Генеральная дирекция
+  \par \redline • Производственная дирекция
+  \par \redline • Коммерческая дирекция
+  \par \redline • Финансовая дирекция
+  \par \redline • Служба качества
+  \par \redline • Техническая дирекция
+
+  \par \redline Товаропроводящая сеть компании включает 6 торговых филиалов в Беларуси (Минск, Гомель, Витебск, Могилёв, Гродно, Брест) и торговый дом в Москве. Каждый филиал имеет собственную структуру управления, подчиняющуюся головному офису.
+
+  \par \redline Производственные площадки имеют следующие основные подразделения:
+  
+  \par \redline • Производственные цеха
+  \par \redline • Лаборатории контроля качества
+  \par \redline • Складские комплексы
+  \par \redline • Инженерно-технические службы
+  \par \redline • Административно-хозяйственные отделы
+
+  \par \redline Все производственные площадки сертифицированы по международным стандартам СТБ ISO 9001-2015, ISO 14001, ISO 45001 и FSSC 22000, что определяет высокий уровень организации производственных и управленческих процессов.
+
+  \par \redline \textbf{Функциональная структура ОАО «Савушкин продукт»}
+
+  \par \redline Функциональная структура - это способ организации деятельности предприятия, при котором каждое подразделение специализируется на выполнении определенных функций или задач. Она ориентирована на специализацию и разделение труда, что позволяет повысить профессионализм сотрудников и эффективность выполнения отдельных операций и процессов.
+
+  \par \redline Основные преимущества функциональной структуры ОАО "Савушкин продукт":
+  \par \redline • Высокая компетентность сотрудников в своей области;
+  \par \redline • Четкое распределение ответственности;
+  \par \redline • Возможность контроля качества работ;
+  \par \redline • Оперативность решения узких, специализированных задач.
+
+  \par \redline Функциональная структура на ОАО "Савушкин продукт" имеет следующее распределение задач и ответственности:
+  \par \redline • Производственный департамент отвечает за организацию и управление производственными процессами на предприятии;
+  \par \redline • Финансовое управление занимается финансовым планированием, учетом и контролем;
+  \par \redline • Отдел сбыта и маркетинга отвечает за продвижение продукции и взаимодействие с клиентами;
+  \par \redline • Отдел информационных технологий разрабатывает и внедряет информационные системы, а также обеспечивает техническую поддержку;
+  \par \redline • Юридический отдел осуществляет правовое сопровождение деятельности предприятия;
+  \par \redline • Отдел кадров занимается управлением персоналом.
+
+  \par \redline В составе технической дирекции функционирует Бюро перспективных разработок, выполняющее стратегическую функцию по поиску, разработке и внедрению инноваций. К основным задачам Бюро относится разработка и поддержка инновационных инструментов управления предприятием, создание систем описания технологических процессов, изучение новых технологий для повышения эффективности производства.
+
+  \par \redline \textbf{Взаимосвязь организационной и функциональной структур}
+
+  \par \redline Таким образом, организационная структура определяет иерархию управления, а функциональная - распределение задач и ответственности между различными подразделениями ОАО «Савушкин продукт». Предприятие построено по принципу вертикальной интеграции с четким распределением функций между подразделениями и эффективной системой управления, что обеспечивает успешное функционирование предприятия как единого производственного комплекса.
 
   \par
 }
