--- a/summary.tex
+++ b/summary.tex
@@ -14,9 +14,9 @@
     \par 1.3 Обзор задач, решаемых подразделением \dotfill 10
     \par 1.4 Обзор используемых технических средств на предприятии \dotfill 10
     \par {\bfseries 2. ПЛАН ИНДИВИДУАЛЬНОГО ЗАДАНИЯ \dotfill 16}
-    \par 1.1 Анализ существующих решений. описание достоинств и недостатков \dotfill 6
-    \par 1.2 Постановка задачи и описание функций разрабатываемой системы \dotfill 7 
-    \par 1.3 Выбор средств реализации \dotfill 10 
+    \par 2.1 Анализ существующих решений. Описание достоинств и недостатков \dotfill 6
+    \par 2.2 Постановка задачи и описание функций разрабатываемой системы \dotfill 7 
+    \par 2.3 Выбор средств реализации \dotfill 10 
     \par {\bfseries ЗАКЛЮЧЕНИЕ \dotfill 63} 
     \par {\bfseries СПИСОК СОКРАЩЕНИЙ \dotfill 64} 
     \par {\bfseries СПИСОК ЛИТЕРАТУРЫ \dotfill 65} 
