--- a/introduction.tex
+++ b/introduction.tex
@@ -8,13 +8,11 @@
 
 {\gostFont
 
-\par \redline На современном этапе развития человечества довольно сложно представить мир без нейронных сетей, которые продолжают развиваться и осваивать всё новые сферы и области человеческой деятельности. Одной из таких хорошо освоенных нейронными сетями сфер является производственная сфера. Обученные нейронные сети способны классифицировать продукты производства и определять их дальнейшую судьбу, способны предсказывать поведение некоторой системы для дальнейшего планирования производства, искать аномалии в данных технологического процесса и многое другое. 
+\par \redline В современном мире эффективность образовательного процесса во многом определяется доступностью, структурированностью и удобством использования образовательных ресурсов. Несмотря на существование различных подходов к обучению и множества образовательных платформ, наблюдается значительный разрыв между структурированным представлением информации и возможностью быстрого доступа к конкретным инструкциям, что существенно снижает эффективность образовательного процесса и затрудняет освоение новых технологий.
 
-\par \redline Данная работа как раз и посвящена прогнозированию данных технологического процесса производственного оборудования, а именно пастеризационной установки. Для выполнения данной задачи будут использоваться нейронные сети, поскольку решение задачи прогнозирования именно нейросетевым способом на сегодняшний день является одним из самых актуальных, эффективных, точных и изученных способов решения данной задачи. Мало того, что такой способ позволяет гибко адаптироваться к процессам и научиться достаточно точно их прогнозировать, так ещё и такой способ предусматривает возможность, так скажем, подстраивания, благодаря чему, можно улавливать новые особенности процесса. К тому же, существует большое количество различной литературы про прогнозированию с использованием нейронных сетей, что даёт уверенность в том, что такой способ обеспечивает неоходимыми результатами, а также что можно достичь хороших прогнозов, используя опыт различных авторов. 
+\par \redline Разработка образовательной платформы для обмена и изучения структурированных обучающих материалов представляет собой актуальную задачу, объединяющую современные технологии веб-разработки и инновационные подходы к организации образовательного контента. Основная цель проекта – создание системы, которая позволит пользователям не только получать доступ к структурированным обучающим материалам, но и создавать собственные образовательные ресурсы, визуализировать взаимосвязи между различными компонентами изучаемых технологий и отслеживать прогресс обучения.
 
-\par \redline По большей части, данная работа является смесью задачи прогнозирования и машинного обучения, поскольку в её рамках будет рассматриваться изучение предметной области и определение задач и целей прогнозирования, сбор, анализ и обработка данных технологического процесса пастеризационной установки, их подготовка к прогнозирования и обучнию модели нейронной сети, после проектирование и реализация самой нейронной сети, её обучение, тестирование и оценка, а в заключительном этапе готовую модель необходимо развернуть для взаимодействия с пастеризационной установкой.
-
-\par \redline Дойдя до этапа создания модели, будут выбраны основные архитектуры нейронных сетей, подробно описаны их способы функционирования и обучения, а также детально будут рассмотрены результаты работы моделей и их сравнение между собой.
+\par \redline В ходе преддипломной практики на предприятии ОАО «Савушкин продукт» в бюро перспективных разработок были изучены структура предприятия, должностные инструкции работников подразделения, задачи, решаемые подразделением, используемые технические средства, а также выполнены задния по доработке существующих на предприятии проектов и разработке нового проекта.
 
 \par
 }
