Добавление раздела предварительной версии раздела план индивидуального задания

--- a/Chapter_2.tex
+++ b/Chapter_2.tex
@@ -362,7 +362,7 @@
 
   \par \redline На основе анализа существующих решений и поставленных задач были сформулированы следующие функциональные требования к разрабатываемой системе:
 
-  \subsubsection*{2.2.3.1 Подсистема регистрации и авторизации пользователей}
+  \par \redline Подсистема регистрации и авторизации пользователей:
 
   \par \redline • Регистрация новых пользователей с использованием электронной почты и пароля
   \par \redline • Авторизация пользователей с использованием JWT-токенов
@@ -370,7 +370,7 @@
   \par \redline • Управление профилями пользователей (редактирование личной информации, изменение пароля)
   \par \redline • Разграничение прав доступа для различных категорий пользователей
 
-  \subsubsection*{2.2.3.2 Подсистема создания и редактирования образовательных ресурсов}
+  \par \redline Подсистема создания и редактирования образовательных ресурсов:
 
   \par \redline • Создание новых книг инструкций с указанием названия и тегов
   \par \redline • Добавление, редактирование и удаление страниц инструкций в книге
@@ -381,7 +381,7 @@
   \par \redline • Предварительный просмотр создаваемых материалов
   \par \redline • Возможность копирования и адаптации существующих книг инструкций
 
-  \subsubsection*{2.2.3.3 Подсистема поиска образовательных ресурсов}
+  \par \redline Подсистема поиска образовательных ресурсов:
 
   \par \redline • Поиск книг инструкций по названию и тегам
   \par \redline • Фильтрация результатов поиска по различным параметрам
@@ -390,7 +390,7 @@
   \par \redline • Сохранение истории поисковых запросов пользователя
   \par \redline • Возможность добавления книг инструкций в закладки для быстрого доступа
 
-  \subsubsection*{2.2.3.4 Подсистема отслеживания прогресса обучения}
+  \par \redline Подсистема отслеживания прогресса обучения:
 
   \par \redline • Отметка изученных инструкций
   \par \redline • Визуализация прогресса обучения по различным книгам инструкций
@@ -398,7 +398,7 @@
   \par \redline • Напоминания о необходимости продолжить обучение
   \par \redline • Генерация отчетов о прогрессе обучения
 
-  \subsubsection*{2.2.3.5 Подсистема взаимодействия пользователей}
+  \par \redline Подсистема взаимодействия пользователей:
 
   \par \redline • Возможность оценивания и комментирования книг инструкций
   \par \redline • Формирование рейтинга книг инструкций на основе оценок пользователей
@@ -423,14 +423,14 @@
 
   \par \redline Помимо функциональных требований, к разрабатываемой системе предъявляются следующие нефункциональные требования:
 
-  \subsubsection*{2.2.4.1 Требования к производительности}
+  \par \redline Требования к производительности:
 
   \par \redline • Время отклика системы при выполнении основных операций не должно превышать 2 секунды
   \par \redline • Система должна поддерживать одновременную работу не менее 1000 пользователей
   \par \redline • Время загрузки страницы инструкций не должно превышать 3 секунды
   \par \redline • Время поиска по базе образовательных ресурсов не должно превышать 1 секунды
 
-  \subsubsection*{2.2.4.2 Требования к безопасности}
+  \par \redline Требования к безопасности:
 
   \par \redline • Защита персональных данных пользователей в соответствии с законодательством
   \par \redline • Шифрование паролей пользователей с использованием современных алгоритмов
@@ -439,20 +439,20 @@
   \par \redline • Регулярное резервное копирование данных
   \par \redline • Журналирование действий пользователей для аудита безопасности
 
-  \subsubsection*{2.2.4.3 Требования к надежности}
+  \par \redline Требования к надежности:
 
   \par \redline • Доступность системы не менее 99.9\% времени
   \par \redline • Автоматическое восстановление после сбоев
   \par \redline • Сохранение данных пользователей при непредвиденном завершении сеанса
   \par \redline • Регулярное тестирование системы на наличие ошибок
 
-  \subsubsection*{2.2.4.4 Требования к масштабируемости}
+  \par \redline Требования к масштабируемости:
 
   \par \redline • Возможность горизонтального масштабирования системы при увеличении нагрузки
   \par \redline • Модульная архитектура, позволяющая добавлять новые функциональные возможности
   \par \redline • Поддержка различных типов образовательного контента
 
-  \subsubsection*{2.2.4.5 Требования к пользовательскому интерфейсу}
+  \par \redline Требования к пользовательскому интерфейсу:
 
   \par \redline • Интуитивно понятный интерфейс, не требующий специального обучения
   \par \redline • Адаптивный дизайн для работы на различных устройствах (компьютеры, планшеты, смартфоны)
@@ -578,7 +578,7 @@
 
   \par \redline Помимо основных технологий, для реализации образовательной платформы планируется использование следующих дополнительных библиотек и инструментов:
 
-  \subsubsection*{2.3.2.1 Библиотеки для клиентской части}
+  \par \redline Библиотеки для клиентской части:
 
   \par \redline • React Router — библиотека для управления маршрутизацией в React-приложении, обеспечивающая навигацию между различными компонентами без перезагрузки страницы
   \par \redline • Redux — библиотека для управления состоянием приложения, обеспечивающая предсказуемое поведение и упрощающая отладку
@@ -589,7 +589,7 @@
   \par \redline • React DnD (Drag and Drop) — библиотека для реализации функционала перетаскивания элементов, необходимая для удобного редактирования страниц инструкций
   \par \redline • Jest и React Testing Library — инструменты для тестирования React-компонентов, обеспечивающие качество и надежность клиентской части приложения
 
-  \subsubsection*{2.3.2.2 Библиотеки для серверной части}
+  \par \redline Библиотеки для серверной части:
 
   \par \redline • Sequelize — ORM для работы с PostgreSQL, упрощающая взаимодействие с базой данных и обеспечивающая абстракцию от SQL-запросов
   \par \redline • Passport.js — middleware для аутентификации в Node.js, поддерживающий различные стратегии аутентификации, включая JWT
@@ -600,7 +600,7 @@
   \par \redline • Nodemailer — библиотека для отправки электронных писем, необходимая для функционала восстановления пароля и уведомлений
   \par \redline • Socket.io — библиотека для реализации двунаправленной связи между клиентом и сервером в реальном времени, необходимая для функционала совместной работы над образовательными ресурсами
 
-  \subsubsection*{2.3.2.3 Инструменты разработки и развертывания}
+  \par \redline Инструменты разработки и развертывания:
 
   \par \redline • Webpack — инструмент для сборки и оптимизации клиентской части приложения, обеспечивающий минификацию кода и управление зависимостями
   \par \redline • Babel — транспилятор JavaScript, позволяющий использовать современные возможности языка с сохранением совместимости с различными браузерами
@@ -627,7 +627,7 @@
 
   \par \redline Для обеспечения масштабируемости, поддерживаемости и гибкости разрабатываемой системы планируется использование следующих архитектурных решений и паттернов проектирования:
 
-  \subsubsection*{2.3.3.1 Клиентская часть}
+  \par \redline Клиентская часть:
 
   \par \redline • Компонентная архитектура — разделение пользовательского интерфейса на независимые, переиспользуемые компоненты, каждый из которых отвечает за определенную функциональность
   \par \redline • Flux-архитектура (через Redux) — однонаправленный поток данных, обеспечивающий предсказуемое изменение состояния приложения и упрощающий отладку
@@ -636,7 +636,7 @@
   \par \redline • Lazy Loading — отложенная загрузка компонентов и ресурсов для улучшения производительности приложения
   \par \redline • Мемоизация — оптимизация производительности путем кеширования результатов вычислений
 
-  \subsubsection*{2.3.3.2 Серверная часть}
+  \par \redline Серверная часть:
 
   \par \redline • MVC (Model-View-Controller) — разделение серверной логики на модели (работа с данными), представления (формирование ответов) и контроллеры (обработка запросов)
   \par \redline • Repository Pattern — абстракция доступа к данным, скрывающая детали работы с базой данных и упрощающая тестирование
@@ -645,7 +645,7 @@
   \par \redline • Service Layer — выделение бизнес-логики в отдельный слой, независимый от контроллеров и моделей
   \par \redline • Error Handling Middleware — централизованная обработка ошибок для обеспечения единообразного поведения приложения при возникновении исключений
 
-  \subsubsection*{2.3.3.3 Общие архитектурные решения}
+  \par \redline Общие архитектурные решения:
 
   \par \redline • RESTful API — архитектурный стиль взаимодействия между клиентом и сервером, основанный на принципах REST
   \par \redline • JWT-based Authentication — механизм аутентификации на основе токенов, не требующий хранения состояния сессии на сервере
@@ -721,7 +721,7 @@
 
   \par \redline Безопасность является критически важным аспектом разрабатываемой образовательной платформы, особенно учитывая необходимость защиты персональных данных пользователей и образовательного контента. Для обеспечения безопасности системы выбраны следующие инструменты и подходы:
 
-  \subsubsection*{2.3.5.1 Аутентификация и авторизация}
+  \par \redline Аутентификация и авторизация:
 
   \par \redline • JSON Web Tokens (JWT) — для безопасной передачи информации о пользователе между клиентом и сервером без необходимости хранения состояния сессии на сервере
   \par \redline • Bcrypt — для хеширования паролей пользователей с использованием соли и алгоритма, устойчивого к атакам перебором
@@ -729,7 +729,7 @@
   \par \redline • HTTPS — для шифрования данных, передаваемых между клиентом и сервером, с использованием TLS/SSL сертификатов
   \par \redline • CORS (Cross-Origin Resource Sharing) — для контроля доступа к ресурсам сервера с других доменов
 
-  \subsubsection*{2.3.5.2 Защита от распространенных уязвимостей}
+  \par \redline Защита от распространенных уязвимостей:
 
   \par \redline • Helmet.js — для установки HTTP-заголовков безопасности, защищающих от различных типов атак (XSS, clickjacking, MIME-sniffing и др.)
   \par \redline • Express-validator или Joi — для валидации и санитизации входных данных, предотвращающих инъекции и другие атаки, связанные с некорректными данными
@@ -737,14 +737,14 @@
   \par \redline • Content Security Policy (CSP) — для ограничения источников загружаемых ресурсов и предотвращения XSS-атак
   \par \redline • Rate Limiting — для защиты от DDoS-атак и брутфорс-атак на систему аутентификации
 
-  \subsubsection*{2.3.5.3 Безопасность данных}
+  \par \redline Безопасность данных:
 
   \par \redline • Параметризованные запросы — для предотвращения SQL-инъекций при работе с базой данных
   \par \redline • Шифрование чувствительных данных в базе данных — для защиты персональной информации пользователей
   \par \redline • Регулярное резервное копирование данных — для обеспечения возможности восстановления в случае потери или повреждения данных
   \par \redline • Управление доступом на уровне базы данных — для ограничения прав доступа к данным в соответствии с ролями пользователей
 
-  \subsubsection*{2.3.5.4 Мониторинг и аудит безопасности}
+  \par \redline Мониторинг и аудит безопасности:
 
   \par \redline • Winston или Morgan — для логирования событий безопасности и действий пользователей
   \par \redline • Sentry или аналогичные сервисы — для отслеживания ошибок и потенциальных проблем безопасности в реальном времени
@@ -770,7 +770,7 @@
 
   \par \redline Пользовательский интерфейс является критически важным компонентом образовательной платформы, так как от его удобства и интуитивности напрямую зависит эффективность обучения и удовлетворенность пользователей. Для разработки пользовательского интерфейса выбраны следующие инструменты и подходы:
 
-  \subsubsection*{2.3.6.1 Основные инструменты для создания интерфейса}
+  \par \redline Основные инструменты для создания интерфейса:
 
   \par \redline • React — библиотека для создания пользовательских интерфейсов, выбранная в качестве основы клиентской части приложения
   \par \redline • Material-UI или Ant Design — библиотека готовых компонентов, обеспечивающая единый стиль оформления и соответствие современным стандартам веб-дизайна
@@ -778,21 +778,22 @@
   \par \redline • Flexbox и CSS Grid — для создания адаптивных и гибких макетов страниц
   \par \redline • SVG — для создания и отображения векторной графики на страницах инструкций
 
-  \subsubsection*{2.3.6.2 Инструменты для работы с SVG и интерактивными элементами}
+  \par \redline Инструменты для работы с SVG и интерактивными элементами:
 
   \par \redline • React-SVG — библиотека для работы с SVG в React, обеспечивающая возможность создания и редактирования интерактивных элементов
   \par \redline • D3.js — библиотека для создания сложных визуализаций и интерактивных графических элементов
   \par \redline • React DnD (Drag and Drop) — библиотека для реализации функционала перетаскивания элементов, необходимая для удобного редактирования страниц инструкций
   \par \redline • React-Konva — библиотека для работы с Canvas в React, предоставляющая альтернативный способ создания интерактивных графических элементов
 
-  \subsubsection*{2.3.6.3 Инструменты для работы с Markdown}
+  \par \redline Инструменты для работы с Markdown:
 
   \par \redline • React-Markdown — библиотека для преобразования Markdown в React-компоненты, необходимая для отображения пошаговых инструкций
   \par \redline • Remark и Rehype — плагины для расширения возможностей Markdown, такие как поддержка синтаксиса для выделения кода, таблиц, математических формул и т.д.
   \par \redline • CodeMirror или Monaco Editor — редакторы кода для создания и редактирования Markdown-контента с подсветкой синтаксиса и предварительным просмотром
 
-  \subsubsection*{2.3.6.4 Инструменты для улучшения пользовательского опыта}
+  \par \redline Инструменты для улучшения пользовательского опыта:
 
   \par \redline • React Router — библиотека для управления маршрутизацией в React-приложении, обеспечивающая навигацию между различными компонентами без перезагрузки страницы
   \par \redline • React Query или SWR — библиотеки для управления состоянием данных, получаемых с сервера, обеспечивающие кеширование, автоматическое обновление и обработку ошибок
   \par
+}
