--- a/completion.tex
+++ b/completion.tex
@@ -1,79 +1,55 @@
 \sectionbreak \section*{
-	\gostTitleFont
-	\redline
-	ЗАКЛЮЧЕНИЕ
+\gostTitleFont
+\redline
+ЗАКЛЮЧЕНИЕ
 }
 
 \subtitlespace
 
 {\gostFont
-	\par \redline В рамках данного дипломного проекта было разработано программное обеспечения для прогнозирования данных временных рядов технологического процесса пастеризационной установки с учётом зависимости параметров процесса между собой. 
-	
-    \par \redline В процессе выполнения дипломного проекта были решены следующие задачи:
-	
-	\begin{itemize}[leftmargin=2.15cm, labelwidth=0.65cm, labelsep=0.0cm] 
-		
-		\item[\theitemcntr.] Проектирование системы.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Выбор архитектуры нейронной сети.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Настройка системы и средств реализации, получение системы реализации. 		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Обеспечение для системы возможность адаптации под нужны конкретного производства, работать в нескольких режимах.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Адаптация способов обучения под конкретную архитектуру нейронной сети.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Тестирование на корректность исполнения отдельных частей.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Реализовано непосредственное прогнозирование данных технологического процесса.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Разработка средства подготовки данных.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Реализация сохранения конфигурации модели нейронной сети.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Реализация возможности дополнительного обучения и редактирования модели нейронной сети.		
-		\addtocounter{itemcntr}{1}
+\par \redline В ходе прохождения преддипломной практики на предприятии ОАО «Савушкин продукт» в бюро перспективных разработок были успешно выполнены все поставленные задачи и получен ценный практический опыт.
 
-		\setcounter{itemcntr}{1}
-	\end{itemize} 
+\par \redline В процессе практики были изучены:
+\begin{itemize}[leftmargin=2.15cm, labelwidth=0.65cm, labelsep=0.0cm] 
 
-	\par \redline Данное программное обеспечение удовлетворяет всем поставленным требованиям, а именно:
-	
-	\begin{itemize}[leftmargin=2.15cm, labelwidth=0.65cm, labelsep=0.0cm] 
-		
-		\item[\theitemcntr.] Возможность формирование прогнозов.	
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Интеграция на контроллеры PLCNext.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Интеграция с внешними системами. 		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Программа устойчива к сбоям.		
-		\addtocounter{itemcntr}{1}
-		
-		\item[\theitemcntr.] Программа не генерирует сбои.		
-		\addtocounter{itemcntr}{1}
-		
-		\setcounter{itemcntr}{1}
-	\end{itemize}  
-	  
-	\par \redline Проведенное тестирование показало ожидаемый результат, что говорит о правильной реализации функционала программного обеспечения. 
+\item[\theitemcntr.] Организационная и функциональная структура предприятия
+\addtocounter{itemcntr}{1}
 
-	\par \redline Для разработанного программного обеспечения был осуществлен расчёт экономической эффективности, а также определена стоимость проекта и прибыль разработчика от реализации проекта.
-	
+\item[\theitemcntr.] Должностные инструкции сотрудников бюро перспективных разработок
+\addtocounter{itemcntr}{1}
+
+\item[\theitemcntr.] Основные задачи и направления деятельности подразделения
+\addtocounter{itemcntr}{1}
+
+\item[\theitemcntr.] Технические средства и программное обеспечение, используемые на предприятии
+\addtocounter{itemcntr}{1}
+
+\setcounter{itemcntr}{1}
+\end{itemize}
+
+\par \redline В рамках практической работы были выполнены следующие задачи:
+\begin{itemize}[leftmargin=2.15cm, labelwidth=0.65cm, labelsep=0.0cm] 
+
+\item[\theitemcntr.] Сборка и запуск основных проектов предприятия: ptusa\_main, EasyEPLANner и SCADA
+\addtocounter{itemcntr}{1}
+
+\item[\theitemcntr.] Изучение архитектуры и принципов работы программных комплексов
+\addtocounter{itemcntr}{1}
+
+\item[\theitemcntr.] Доработка проекта SCADA в части автозаполнения полей при импорте тегов OPC UA Browser
+\addtocounter{itemcntr}{1}
+
+\item[\theitemcntr.] Улучшение информативности сообщений об ошибках коммуникации в проекте ptusa\_main
+\addtocounter{itemcntr}{1}
+
+\item[\theitemcntr.] Разработка клиентской части веб-версии SCADA на React
+\addtocounter{itemcntr}{1}
+
+\setcounter{itemcntr}{1}
+\end{itemize}
+
+\par \redline В процессе выполнения индивидуального задания был проведен анализ существующих образовательных платформ, сформулированы требования к разрабатываемой системе и выбраны оптимальные технологии для ее реализации. Разработанная концепция образовательной платформы предполагает создание интерактивной системы для структурированного представления обучающих материалов с возможностью визуализации взаимосвязей между различными компонентами.
+
+\par \redline Практика позволила получить ценный опыт работы с современными технологиями веб-разработки, промышленными системами автоматизации и методами организации командной работы над крупными проектами. Полученные знания и навыки будут использованы при дальнейшей разработке дипломного проекта.
+
 }
-
-\setcounter{subchaptercntr}{1}
-\setcounter{formulacntr}{1}
-\setcounter{imagecntr}{1}
