--- a/biblio.tex
+++ b/biblio.tex
@@ -9,59 +9,53 @@
 
 \begin{itemize}[leftmargin=2.15cm, labelwidth=0.65cm, labelsep=0.0cm] 
 
-	\item[\theimagecntr.] Бредихин С.А., Космодемьянский Ю.В., Юрин В.Н., Технология и техника переработки молока. {--} М.: Колос, 2003. {--} 400 c.: ил.
-	\addtocounter{imagecntr}{1}
+\item[\theimagecntr.] React – A JavaScript library for building user interfaces [Электронный ресурс]. – Режим доступа: https://reactjs.org/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Байланд Г. Технология производства молочных продуктов: Справочник / Г. Байланд; пер. с рус. А. Бирюков, О. Куркина. {--} Москва: ЗАО <<Тетра Пак АО>>, 2002. {--} 440 с
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Node.js Documentation [Электронный ресурс]. – Режим доступа: https://nodejs.org /en/docs/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Хайдман Р., Атанасоопулос Д. Прогнозирование: принципы и практика / пер. с англ. А. В. Логунова {--} М.: ДМК Пресс, 2023. {--} 458 с.: ил. 
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Express - Node.js web application framework [Электронный ресурс]. – Режим доступа: https://expressjs.com/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Головко, В. А. Нейросетевые технологии обработки данных : учеб. пособие / В. А. Головко, В. В. Краснопрошин. {--} Минск : БГУ, 2017. {--} 263 с. {--} (Классическое университетское издание).
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] PostgreSQL Documentation [Электронный ресурс]. – Режим доступа: https://www. postgresql.org/docs/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Уатт Дж. Машинное обучение: основы, алгоритмы и практика применения / пер. с англ. А. В. Логунова {--} СПб.: БХВ-Петербург, 2022. {--} 640 с.: ил. 
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Material-UI: A popular React UI framework [Электронный ресурс]. – Режим доступа: https://material-ui.com/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Бурков А. Инженерия машинного обучения / пер. с анг. А. А. Слинкина. {--} М.: ДМК Пресс, 2022. {--} 306 с.: цв. ил.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] JWT.IO - JSON Web Tokens [Электронный ресурс]. – Режим доступа: https://jwt.io/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Kaspersky MLAD {--} (Kaspersky Machine Learning for Anomaly Detection) методы машинного обучения кампании Kaspersky для выявления аномалий
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Markdown Guide [Электронный ресурс]. – Режим доступа: https://www.markdown guide.org/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Kaspersky Machine Learning for Anomaly Detection Система раннего обнаружения аномалий [Электронный ресурс] / Лаборатория Касперского. {--} Москва, 2021. {--} Режим доступа: https://mlad.kaspersky.ru/. – Дата доступа: 25.05.2024.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Redux - A Predictable State Container for JS Apps [Электронный ресурс]. – Режим доступа: https://redux.js.org/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Гудфеллоу Я., Бенджио И., Курвилль А. Глубокое обучение / пер. с анг. А. А. Слинкина. {--} 2-е изд., испр. {--} М.: ДМК Пресс, 2018. {--} 652 с.: цв. ил. 
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Webpack Documentation [Электронный ресурс]. – Режим доступа: https://webpack. js.org/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Николенко С., Кадурин А., Архангельская Е. Глубокое обучение. {--} СПб.:Питер, 2020 {--} 480 с.: ил. {--} (Серия <<Библиотека программиста>>)
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] TypeScript Documentation [Электронный ресурс]. – Режим доступа: https://www. typescriptlang.org/docs/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] LSTM {--} сети долгой краткосрочной памяти [Электронный ресурс]/информа- ционно-образовательное сообщество Хабр {--} Режим доступа: https://habr.com/ru /companies/wunderfund/articles/331310/. {--} Дата доступа: 25.05. 2024.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Phoenix Contact – Контроллер [Электронный ресурс]. – Режим доступа: https:// www.phoenixcontact.com/ru-pc/otrasli-promyshlennosti/plcnext-technology. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Pasteuriser AI Assistant [Электронный ресурс]/github.com {--}Режим доступа: https ://github.com/1sputnik/pasteuriser-ai-assistant. {--} Дата доступа: 29.05. 2024.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] SCADA системы. Основы проектирования и разработки [Электронный ресурс]. – Режим доступа: https://www.scada.ru/ru/documentation/. – Дата доступа: 25.05.20 24.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Phoenix Contact {--} Контроллер [Электронный ресурс] // phoenixcontact.com – Режим доступа: https://www.phoenixcontact.com/ru-pc/otrasli-promyshlennosti/plcn ext-technology. {--} Дата доступа: 21.05.2024.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Python Documentation [Электронный ресурс]. – Режим доступа: https://docs.python. org/3/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] AXC F 2152 {--} Контроллер [Электронный ресурс] // phoenixcontact.com – Режим доступа: https://www.phoenixcontact.com/ru-pc/produkty/kontroller-axc-f-2152-\newline 2404267. {--} Дата доступа: 21.05.2024.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] TensorFlow.js Machine Learning for the Web and Beyond. [Электронный ресурс]. – Режим доступа: https://www.tensorflow.org/js?hl=ru. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] PLCnext-howto [Электронный ресурс] // github.com {--} Режим доступа: https://git\newline hub.com/savushkin-r-d/ PLCnext-howto/tree/master {--} Дата доступа: 23.05.2024.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Wang, Z., Zhang, Y., & Wang, L. (2021). A Deep Learning Approach for Automated Detection of Animal Diseases. Journal of Veterinary Science[Электронный ресурс]. – Режим доступа: https://pmc.ncbi.nlm.nih.gov/articles/PMC8051234/. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
-    \item[\theimagecntr.] Обнаружение аномалий в данных технологического процесса / А. Л. Михняев [и др.] // Цифровая среда: технологии и перспективы. DETP 2022, Брест, 31 октября 2022 г. / Министерство образования Республики Беларусь, Брестский государственный технический университет; редкол.: Н. Н. Шалобыта [и др.]. {--} Брест : БрГТУ, 2022. {--} С. 62–65.
-    \addtocounter{imagecntr}{1}
-
-    \item[\theimagecntr.] Дворанинович, Д. А. Применение нейронных сетей LSTM для прогнозирования временных рядов / Д. А. Дворанинович ; науч. рук. А. Л. Михняев // Сборник конкурсных научных работ студентов и магистрантов : в 2 частях / Министерство образования Республики Беларусь, Брестский государственный технический университет ; редкол.: Н. Н. Шалобыта (гл. ред.) [и др.]. {--} Брест : БрГТУ, 2023. {--} Часть 1. {--} С. 121–125. – Библиогр.: с. 125 (5 назв.).
-    \addtocounter{imagecntr}{1}
-
-    \item[\theimagecntr.] Абоимов, И. В. Инновационность применения LSTM в связке с GAN / И. В. Абоимов, Д. А. Дворанинович // Сборник тезисов научной студенческой конференции <<Неделя науки {--} 2023>> / Министерство образования Республики Беларусь, Брестский государственный технический университет ; редкол.: Н. Н. Шалобыта [и др.]. {--} Брест : БрГТУ, 2023. {--} С. 59–60.
-    \addtocounter{imagecntr}{1}
+\item[\theimagecntr.] Ветеринарные исследовательская статья [Электронный ресурс]. – Режим доступа: https://www.cell.com/heliyon/fulltext/S2405-8440(23)00706-5. – Дата доступа: 25.05.2024.
+\addtocounter{imagecntr}{1}
 
 \end{itemize}
 
