--- a/introduction.tex
+++ b/introduction.tex
@@ -8,13 +8,11 @@
 
 {\gostFont
 
-\par \redline На современном этапе развития человечества довольно сложно представить мир без нейронных сетей, которые продолжают развиваться и осваивать всё новые сферы и области человеческой деятельности. Одной из таких хорошо освоенных нейронными сетями сфер является производственная сфера. Обученные нейронные сети способны классифицировать продукты производства и определять их дальнейшую судьбу, способны предсказывать поведение некоторой системы для дальнейшего планирования производства, искать аномалии в данных технологического процесса и многое другое. 
+\par \redline В современном мире эффективность диагностики заболеваний животных, во многом зависит от точности, скорости и доступности специализированных инструментов. Не-смотря на существование различных методов диагностики и ветеринарных платформ, многие из них требуют значительных временных и финансовых затрат, а также наличия узкоспециализированных знаний. Это создает барьер для своевременного выявления заболеваний, что может привести к серьезным экономическим потерям и ухудшению здоровья животных.
 
-\par \redline Данная работа как раз и посвящена прогнозированию данных технологического процесса производственного оборудования, а именно пастеризационной установки. Для выполнения данной задачи будут использоваться нейронные сети, поскольку решение задачи прогнозирования именно нейросетевым способом на сегодняшний день является одним из самых актуальных, эффективных, точных и изученных способов решения данной задачи. Мало того, что такой способ позволяет гибко адаптироваться к процессам и научиться достаточно точно их прогнозировать, так ещё и такой способ предусматривает возможность, так скажем, подстраивания, благодаря чему, можно улавливать новые особенности процесса. К тому же, существует большое количество различной литературы про прогнозированию с использованием нейронных сетей, что даёт уверенность в том, что такой способ обеспечивает неоходимыми результатами, а также что можно достичь хороших прогнозов, используя опыт различных авторов. 
+\par \redline Разработка веб-платформы для диагностики заболеваний с использованием нейронных сетей представляет собой актуальную задачу, объединяющую современные технологии искусственного интеллекта, веб-разработки и ветеринарной медицины. Основная цель проекта – создание системы, которая на основе введенных симптомов и данных о состоянии животного сможет с высокой точностью определять наличие заболеваний. Платформа будет использовать обученные нейронные сети для анализа данных и предоставления быстрого и надежного результата.
 
-\par \redline По большей части, данная работа является смесью задачи прогнозирования и машинного обучения, поскольку в её рамках будет рассматриваться изучение предметной области и определение задач и целей прогнозирования, сбор, анализ и обработка данных технологического процесса пастеризационной установки, их подготовка к прогнозирования и обучнию модели нейронной сети, после проектирование и реализация самой нейронной сети, её обучение, тестирование и оценка, а в заключительном этапе готовую модель необходимо развернуть для взаимодействия с пастеризационной установкой.
-
-\par \redline Дойдя до этапа создания модели, будут выбраны основные архитектуры нейронных сетей, подробно описаны их способы функционирования и обучения, а также детально будут рассмотрены результаты работы моделей и их сравнение между собой.
+\par \redline  В ходе преддипломной практики на предприятии ОАО «Савушкин продукт» в бюро перспективных разработок были изучены структура предприятия, должностные инструкции работников подразделения, задачи, решаемые подразделением, используемые технические средства, а также выполнены задния по доработке существующих на предприятии проектов и разработке нового проекта.
 
 \par
 }
