--- a/reduction.tex
+++ b/reduction.tex
@@ -9,19 +9,25 @@
 
 \begin{tabular}{p{0.85cm} p{1.75cm} p{0.3cm} p{131.5mm}}
     & НС & {--} & нейронная сеть. \\
-    & Kaspersky MLAD & {--} & (Kaspersky Machine Learning for Anomaly Detection) методы машинного обучения кампании Kaspersky для выявления аномалий. \\
     & SCADA & {--} & (Supervisory for Control And Data Acquisition) система, обеспечивающая диспетчерское управление и сбор данных, относящаяся к классу программного обеспечения для создания автоматизированных систем управления технологическими процессами. \\
     & CNN & {--} & (Convolutional Neural Network) свёрточная нейронная сеть. \\
-    & DenseNet & {--} & (Densely Connected Networks) тип сверточной нейронной сети, которая использует плотные связи между слоями через плотные блоки, где мы соединяем все слои напрямую друг с другом. \\
-    & RNN & {--} & (Recurrent Neural Network) рекуррентная нейронная сеть. \\
-    & TCN & {--} & (Temporal Convolutional Networks) темпоральная CNN. \\
-    & MSE & {--} & (Mean Squared Error) среднеквадратичная ошибка. \\
-    & SRN & {--} & (Simple Recurrent Network) простая реккурентная сеть. \\
-    & LSTM & {--} & (Long Short-Term Memory) сеть долгой краткосрочной памяти. \\
-    & GRU & {--} & (Gated Recurrent Units) управляемые рекуррентные нейроны. \\
-    & MGU & {--} & (Minimal Recurrent Units) минимальные управляемые нейроны. \\
     & ПО & {--} & программное обеспечение. \\
     & ПП & {--} & программный продукт. \\
+    & АСУТП & {--} & автоматизированная система управления технологическими процессами. \\
+    & БПР & {--} & бюро перспективных разработок. \\
+    & ОАО & {--} & открытое акционерное общество. \\
+    & ПО & {--} & программное обеспечение. \\
+    & СУБД & {--} & система управления базами данных. \\
+    & API & {--} & (Application Programming Interface) программный интерфейс приложения. \\
+    & CSS & {--} & (Cascading Style Sheets) каскадные таблицы стилей. \\
+    & HTML & {--} & (HyperText Markup Language) язык гипертекстовой разметки. \\
+    & HTTP & {--} & (HyperText Transfer Protocol) протокол передачи гипертекста. \\
+    & JWT & {--} & (JSON Web Token) веб-токен в формате JSON. \\
+    & OPC UA & {--} & (OPC Unified Architecture) унифицированная архитектура OPC. \\
+    & REST & {--} & (Representational State Transfer) передача состояния представления. \\
+    & SQL & {--} & (Structured Query Language) язык структурированных запросов. \\
+    & SVG & {--} & (Scalable Vector Graphics) масштабируемая векторная графика. \\
+    & XML & {--} & (eXtensible Markup Language) расширяемый язык разметки. \\
 \end{tabular}
 
 }
