--- a/Chapter_2.tex
+++ b/Chapter_2.tex
@@ -145,7 +145,7 @@
   \par \redline Однако с точки зрения образовательного процесса Miro имеет следующие недостатки:
   
   \par \redline • Отсутствие специализации на образовательном контенте
-  \par \redline • Отсутствие встроенных средств для написания технической документации с поддержкой Markdown
+  \par \redline • Отсутствие встроенных средств для написания технической документации с поддержкой Mark\-down
   \par \redline • Отсутствие механизмов для отслеживания прогресса обучения
   \par \redline • Сложность организации большого объема информации на одной доске
 
@@ -436,7 +436,7 @@
 
   \par \redline • Доступ к структурированным обучающим материалам по различным технологиям и инструментам
   \par \redline • Визуальное представление взаимосвязей между компонентами изучаемых технологий в виде интерактивных страниц инструкций
-  \par \redline • Пошаговые инструкции по использованию различных средств с поддержкой Markdown
+  \par \redline • Пошаговые инструкции по использованию различных средств с поддержкой Mark\-down
   \par \redline • Создание и редактирование собственных книг инструкций
   \par \redline • Отслеживание прогресса обучения и получение персональных рекомендаций
   \par \redline • Взаимодействие с другими пользователями через комментарии и оценки
@@ -467,7 +467,7 @@
 
 {\gostFont
 
-  \par \redline На основе анализа требований к разрабатываемой системе и с учетом современных тенденций в веб-разработке были выбраны следующие технологии для реализации образовательной платформы. Выбор технологий осуществлялся с учетом необходимости создания масштабируемого, производительного и удобного в использовании веб-приложения с клиент-серверной архитектурой.
+  \par \redline На основе анализа требований к разрабатываемой системе и с учетом современных тенденций в веб-разработке были выбраны следующие технологии для реализации образовательной платформы. Выбор технологий осуществлялся с учетом необходимости создания масштабируемого, производительного и удобного в использовании веб-приложе\-ния с клиент-серверной архитектурой.
 
   \par \redline Для разработки клиентской части приложения выбрана библиотека React. Данный выбор обусловлен следующими факторами:
   
