--- a/biblio.tex
+++ b/biblio.tex
@@ -5,46 +5,6 @@
 }
 \titlespace
 
-{\gostFont
+\nocite{*}
 
-\begin{itemize}[leftmargin=2.15cm, labelwidth=0.65cm, labelsep=0.0cm] 
-
-\item[\theimagecntr.] React – A JavaScript library for building user interfaces [Электронный ресурс]. – Режим доступа: https://reactjs.org/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] Node.js Documentation [Электронный ресурс]. – Режим доступа: https://nodejs.org /en/docs/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] Express - Node.js web application framework [Электронный ресурс]. – Режим доступа: https://expressjs.com/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] PostgreSQL Documentation [Электронный ресурс]. – Режим доступа: https://www. postgresql.org/docs/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] Material-UI: A popular React UI framework [Электронный ресурс]. – Режим доступа: https://material-ui.com/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] JWT.IO - JSON Web Tokens [Электронный ресурс]. – Режим доступа: https://jwt.io/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] Markdown Guide [Электронный ресурс]. – Режим доступа: https://www.markdown guide.org/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] Redux - A Predictable State Container for JS Apps [Электронный ресурс]. – Режим доступа: https://redux.js.org/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] Webpack Documentation [Электронный ресурс]. – Режим доступа: https://webpack. js.org/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] TypeScript Documentation [Электронный ресурс]. – Режим доступа: https://www. typescriptlang.org/docs/. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] Phoenix Contact – Контроллер [Электронный ресурс]. – Режим доступа: https:// www.phoenixcontact.com/ru-pc/otrasli-promyshlennosti/plcnext-technology. – Дата доступа: 25.05.2024.
-\addtocounter{imagecntr}{1}
-
-\item[\theimagecntr.] SCADA системы. Основы проектирования и разработки [Электронный ресурс]. – Режим доступа: https://www.scada.ru/ru/documentation/. – Дата доступа: 25.05.20 24.
-\addtocounter{imagecntr}{1}
-
-\end{itemize}
-
-}
+\printbibliography[heading=none]
