Добавление индивидуального задания

--- a/Chapter_1.tex
+++ b/Chapter_1.tex
@@ -266,6 +266,23 @@
 
 \par \redline В рамках индивидуальных заданий были выполнены доработки существующих проектов. Для проекта SCADA было реализовано автозаполнение полей при импорте тегов OPC UA Browser, что значительно упростило процесс настройки системы и сократило время, необходимое для импорта тегов. Для проекта ptusa\_main были доработаны сообщения об ошибках коммуникации с узлами ввода/вывода, что повысило информативность сообщений и упростило диагностику проблем.
 
-\par \redline Завершающим этапом практики стала разработка клиентской части веб-версии SCADA на React. Данная разработка направлена на создание удобного и отзывчивого пользовательского интерфейса для системы мониторинга и управления технологическими процессами, доступного через веб-браузер. Использование React обеспечило компонентный подход к разработке, высокую производительность при обновлении интерфейса и возможность создания сложных пользовательских интерфейсов.
+\par \redline Завершающим этапом практики стала разработка клиентской части веб-версии SCA\-DA на React. Данная разработка направлена на создание многопоточного веб-сервера для системы мониторинга и управления технологическими процессами (репозиторий - https://gi\-thub.com/DopplerCore/webSCADA/tree/main/scada-server). Использование Rest API обеспечило взаимодействие клиента с сервером, а веб-сокетов - отправки обновлённых данных с сервера подключённым клиентам.
 
+\par \redline Выполнение можно посмотреть в соответствующих issues, pull requests и на рисунке 1 соответственно:
+ 
+  \par \redline • https://github.com/savushkin-r-d/SCADA/issues/131, https://github.com/savushkin-r-d/SCADA/pull/141;
+ 
+  \par \redline • https://github.com/savushkin-r-d/SCADA/issues/135, https://github.com/savushkin-r-d/SCADA/pull/136;
+ 
+  \par \redline • https://github.com/savushkin-r-d/ptusa\_main/issues/798, https://github.com/savushkin-r-d/ptusa\_main/pull/870.
+ 
+  \begin{figure}[h]
+ 
+    \centering
+ 
+    \includegraphics[width=0.5\textwidth]{img/activity.png}
+ 
+    \caption{Активность GitHub}
+ 
+  \end{figure}
 \par }
